# wealthos

./: .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/alembic/: .gitkeep  env.py
backend/alembic/versions/: 0001_baseline.py  0002_create_organizations.py  0003_align_organizations.py  0004_users_memberships.py  0005_user_password_hash.py  0006_create_accounts.py  0007_create_categories.py  0008_create_transactions.py  0009_dashboard_indexes.py  0010_create_goals.py  0011_stabilize_query_indexes.py  0012_create_debts.py  0013_create_tax_foundation.py  0014_create_mexico_tax_foundation.py  0015_create_budgets_and_cash_planning.py
backend/docker/postgres/: init.sql
backend/docker/redis/: .gitkeep
backend/perf/: README.md
backend/perf/explain/latest/: BENCHMARK.txt  SUMMARY.txt  average_daily_savings_90d.txt  cash_flow_monthly.txt  net_worth_mxn.txt  period_cash_flow_summary.txt  recent_transactions.txt  spending_by_category.txt
backend/scripts/: .gitkeep  create_module.py  dev.sh  format.sh  lint.sh  migrate.sh  test.sh
backend/scripts/perf/: benchmark_http.py  explain_analyze.py  seed_load.py
backend/src/wealthos/: __init__.py  main.py
backend/src/wealthos/app/: __init__.py  application.py  lifespan.py  router.py
backend/src/wealthos/core/: __init__.py  config.py  database.py  dependencies.py  logging.py  settings.py  timing.py
backend/src/wealthos/core/middleware/: __init__.py  request_timing.py
backend/src/wealthos/core/security/: __init__.py  current_user.py  oauth2.py  organization_access.py  organization_context.py  organization_permissions.py
backend/src/wealthos/modules/: __init__.py  router_registry.py
backend/src/wealthos/modules/accounts/: README.md
backend/src/wealthos/modules/accounts/api/: dependencies.py  router.py
backend/src/wealthos/modules/accounts/domain/: exceptions.py
backend/src/wealthos/modules/accounts/schemas/: __init__.py  collection.py  create.py  response.py  update.py
backend/src/wealthos/modules/accounts/tests/: test_account_application.py  test_account_domain.py  test_accounts_api.py
backend/src/wealthos/modules/categories/: README.md
backend/src/wealthos/modules/categories/api/: dependencies.py  router.py
backend/src/wealthos/modules/dashboard/: README.md
backend/src/wealthos/modules/debts/: README.md
backend/src/wealthos/modules/goals/: README.md
backend/src/wealthos/modules/identity/: README.md
backend/src/wealthos/modules/organizations/: README.md
backend/src/wealthos/modules/planning/: README.md
backend/src/wealthos/modules/tax_mx/: README.md  __init__.py
backend/src/wealthos/modules/taxes/: README.md  __init__.py
backend/src/wealthos/modules/transactions/: README.md
backend/src/wealthos/shared/: __init__.py
backend/src/wealthos/shared/base/: __init__.py  base_mapper.py  base_repository.py  base_response.py  base_service.py
backend/src/wealthos/shared/domain/: exceptions.py
backend/src/wealthos/shared/persistence/: __init__.py  unit_of_work.py
backend/tests/: .gitkeep  conftest.py  test_health.py  test_money.py
(+685 files in other folders)
