[project]
name = "wealthos"
version = "0.1.0"
description = "Personal Finance Operating System for Independent Professionals."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Ricardo Balam" },
]

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.4",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Required so hatchling installs the src/ layout package.
[tool.hatch.build.targets.wheel]
packages = ["src/wealthos"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.lint.isort]
known-first-party = ["wealthos"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "src/wealthos/modules"]
